Fixing applied styles for selected options and button spacing

--- a/src/app/location-selection/location-select.component.scss
+++ b/src/app/location-selection/location-select.component.scss
@@ -9,19 +9,19 @@
 
 
 .spice-group1 {
-    ::ng-deep & .btn.selected {
+    ::ng-deep & .btn.active {
         background-color: green;
     }
 }
 
 .spice-group2 {
-    ::ng-deep & .btn.selected {
+    ::ng-deep & .btn.active {
         background-color: orange;
     }
 }
 
 .spice-group3 {
-    ::ng-deep & .btn.selected {
+    ::ng-deep & .btn.active {
         background-color: red;
     }
 }
